Fix issue with overflow on Chrome

--- a/assets/app.css
+++ b/assets/app.css
@@ -1,5 +1,6 @@
 body {
     /*font: 1rem/1.5 sans-serif;*/
+    overflow: hidden;
 }
 main {
     display: flex;
